--- a/locales/en-US/setting.json
+++ b/locales/en-US/setting.json
@@ -518,6 +518,11 @@
       "modelDesc": "Model designated for automatic naming of AI art topics",
       "title": "AI Art Automatic Topic Naming"
     },
+    "groupChatSupervisor": {
+      "label": "Group Chat Supervisor Model",
+      "modelDesc": "Model designated for supervising and moderating group chat conversations",
+      "title": "Group Chat Supervision"
+    },
     "helpInfo": "When creating a new assistant, the default assistant settings will be used as preset values.",
     "historyCompress": {
       "label": "Conversation History Model",
