--- a/locales/en-US/setting.json
+++ b/locales/en-US/setting.json
@@ -189,6 +189,17 @@
     },
     "title": "Assistant Information"
   },
+  "settingGroup": {
+    "title": "Group Information",
+    "description": {
+      "placeholder": "Enter group description",
+      "title": "Group Description"
+    },
+    "name": {
+      "placeholder": "Enter group name",
+      "title": "Group Name"
+    }
+  },
   "settingAppearance": {
     "neutralColor": {
       "desc": "Custom grayscale with different color tendencies",
