--- a/locales/en-US/welcome.json
+++ b/locales/en-US/welcome.json
@@ -38,102 +38,122 @@
       "a01": {
         "title": "Brain Storm",
         "emoji": "🧠",
-        "description": "Collaborative idea generation and creative problem solving with multiple perspectives"
+        "description": "Collaborative idea generation and creative problem solving with multiple perspectives",
+        "prompt": "Let's start a brainstorming session for our project. Can you help us generate creative ideas and solutions?"
       },
       "a02": {
         "title": "Werewolf Game",
         "emoji": "🐺",
-        "description": "Social deduction game where players use strategy and discussion to find the werewolves"
+        "description": "Social deduction game where players use strategy and discussion to find the werewolves",
+        "prompt": "Let's play a werewolf game! Can you help us set up the rules and facilitate this social deduction game?"
       },
       "a03": {
         "title": "Mock UN",
         "emoji": "🌍",
-        "description": "Simulate United Nations debates and diplomatic negotiations on global issues"
+        "description": "Simulate United Nations debates and diplomatic negotiations on global issues",
+        "prompt": "Let's simulate a United Nations debate. Can you help us set up a diplomatic negotiation on a global issue?"
       },
       "a04": {
         "title": "Design Review",
         "emoji": "🎨",
-        "description": "Collaborative feedback session for design concepts, prototypes, or creative work"
+        "description": "Collaborative feedback session for design concepts, prototypes, or creative work",
+        "prompt": "We need to review some design work. Can you help us provide constructive feedback on our design concepts and prototypes?"
       },
       "a05": {
         "title": "Code Review",
         "emoji": "💻",
-        "description": "Technical discussion and peer review of code changes and implementations"
+        "description": "Technical discussion and peer review of code changes and implementations",
+        "prompt": "Let's review some code together. Can you help us analyze this code and identify areas for improvement?"
       },
       "a06": {
         "title": "Planning Poker",
         "emoji": "🃏",
-        "description": "Agile estimation technique using cards to estimate project tasks and effort"
+        "description": "Agile estimation technique using cards to estimate project tasks and effort",
+        "prompt": "We're doing planning poker for our project. Can you help us estimate the effort for these tasks using agile techniques?"
       },
       "a07": {
         "title": "Debate Club",
         "emoji": "⚖️",
-        "description": "Structured discussion and argumentation on various topics and current events"
+        "description": "Structured discussion and argumentation on various topics and current events",
+        "prompt": "Let's have a structured debate. Can you help us organize a discussion on this topic with proper argumentation?"
       },
       "a08": {
         "title": "Study Group",
         "emoji": "📚",
-        "description": "Collaborative learning session to discuss concepts and solve problems together"
+        "description": "Collaborative learning session to discuss concepts and solve problems together",
+        "prompt": "Let's form a study group. Can you help us understand these concepts and solve problems together?"
       },
       "a09": {
         "title": "Book Club",
         "emoji": "📖",
-        "description": "Literary discussion and analysis of books, stories, and written works"
+        "description": "Literary discussion and analysis of books, stories, and written works",
+        "prompt": "Let's start a book club discussion. Can you help us analyze this book and explore its themes together?"
       },
       "a10": {
         "title": "Game Night",
         "emoji": "🎲",
-        "description": "Fun interactive games and activities to build team bonds and have fun"
+        "description": "Fun interactive games and activities to build team bonds and have fun",
+        "prompt": "It's game night! Can you help us organize some fun interactive games to build team bonds?"
       },
       "a11": {
         "title": "Movie Club",
         "emoji": "🎬",
-        "description": "Watch and discuss films, documentaries, and visual media together"
+        "description": "Watch and discuss films, documentaries, and visual media together",
+        "prompt": "Let's start a movie club discussion. Can you help us analyze this film and explore its themes together?"
       },
       "a12": {
         "title": "Language Practice",
         "emoji": "🗣️",
-        "description": "Practice speaking and learning new languages with native speakers"
+        "description": "Practice speaking and learning new languages with native speakers",
+        "prompt": "Let's practice a new language together. Can you help us learn and practice speaking this language?"
       },
       "a13": {
         "title": "Cooking Class",
         "emoji": "👨‍🍳",
-        "description": "Learn and share cooking techniques, recipes, and culinary traditions"
+        "description": "Learn and share cooking techniques, recipes, and culinary traditions",
+        "prompt": "Let's have a cooking class! Can you help us learn new recipes and cooking techniques together?"
       },
       "a14": {
         "title": "Tech Talk",
         "emoji": "🚀",
-        "description": "Discuss emerging technologies, innovations, and industry trends"
+        "description": "Discuss emerging technologies, innovations, and industry trends",
+        "prompt": "Let's have a tech talk! Can you help us discuss emerging technologies and industry trends?"
       },
       "a15": {
         "title": "Music Jam",
         "emoji": "🎵",
-        "description": "Collaborative music creation, sharing, and appreciation sessions"
+        "description": "Collaborative music creation, sharing, and appreciation sessions",
+        "prompt": "Let's have a music jam session! Can you help us create and appreciate music together?"
       },
       "a16": {
         "title": "Investment Club",
         "emoji": "📈",
-        "description": "Analyze markets, discuss investment strategies, and share financial insights"
+        "description": "Analyze markets, discuss investment strategies, and share financial insights",
+        "prompt": "Let's analyze the markets together. Can you help us discuss investment strategies and share financial insights?"
       },
       "a17": {
         "title": "Fitness Challenge",
         "emoji": "💪",
-        "description": "Set group fitness goals, share workouts, and motivate each other"
+        "description": "Set group fitness goals, share workouts, and motivate each other",
+        "prompt": "Let's start a fitness challenge! Can you help us set goals and motivate each other to stay fit?"
       },
       "a18": {
         "title": "Travel Planning",
         "emoji": "✈️",
-        "description": "Plan trips, share travel experiences, and discover new destinations"
+        "description": "Plan trips, share travel experiences, and discover new destinations",
+        "prompt": "Let's plan a trip together! Can you help us research destinations and plan our travel itinerary?"
       },
       "a19": {
         "title": "Art Workshop",
         "emoji": "🖼️",
-        "description": "Create, critique, and appreciate various forms of visual and digital art"
+        "description": "Create, critique, and appreciate various forms of visual and digital art",
+        "prompt": "Let's have an art workshop! Can you help us create, critique, and appreciate various forms of art?"
       },
       "a20": {
         "title": "Science Fair",
         "emoji": "🔬",
-        "description": "Explore scientific concepts, conduct experiments, and share discoveries"
+        "description": "Explore scientific concepts, conduct experiments, and share discoveries",
+        "prompt": "Let's explore science together! Can you help us conduct experiments and share our discoveries?"
       }
     },
     "activities": {
