--- a/locales/zh-CN/chat.json
+++ b/locales/zh-CN/chat.json
@@ -2,6 +2,7 @@
   "ModelSwitch": {
     "title": "模型"
   },
+  "active": "活跃",
   "agentDefaultMessage": "你好，我是 **{{name}}**，你可以立即与我开始对话，也可以前往 [助手设置]({{url}}) 完善我的信息。",
   "agentDefaultMessageWithSystemRole": "你好，我是 **{{name}}**，{{systemRole}}，让我们开始对话吧！",
   "agentDefaultMessageWithoutEdit": "你好，我是 **{{name}}**，让我们开始对话吧！",
@@ -13,6 +14,7 @@
     "thought": "思考过程",
     "unknownTitle": "未命名作品"
   },
+  "availableAgents": "可用助手",
   "backToBottom": "跳转至当前",
   "chatList": {
     "longMessageDetail": "查看详情"
@@ -54,11 +56,13 @@
     },
     "title": "模型扩展功能"
   },
+  "groupDescription": "群组描述",
   "history": {
     "title": "助手将只记住最后{{count}}条消息"
   },
   "historyRange": "历史范围",
   "historySummary": "历史消息总结",
+  "inactive": "不活跃",
   "inbox": {
     "desc": "开启大脑集群，激发思维火花。你的智能助理，在这里与你交流一切",
     "title": "随便聊聊"
@@ -76,6 +80,7 @@
   "intentUnderstanding": {
     "title": "正在理解并分析您的意图..."
   },
+  "inviteMembers": "邀请成员",
   "knowledgeBase": {
     "all": "所有内容",
     "allFiles": "所有文件",
@@ -143,6 +148,12 @@
     }
   },
   "newAgent": "新建助手",
+  "noAgentsYet": "此群组还没有助手。点击 + 按钮邀请助手。",
+  "noAvailableAgents": "没有可邀请的助手",
+  "noMatchingAgents": "没有匹配的助手",
+  "noMembersYet": "此群组还没有成员。点击 + 按钮邀请助手。",
+  "noSelectedAgents": "还未选择助手",
+  "owner": "群主",
   "pin": "置顶",
   "pinOff": "取消置顶",
   "rag": {
@@ -183,6 +194,8 @@
     "title": "联网搜索"
   },
   "searchAgentPlaceholder": "搜索助手...",
+  "searchAgents": "搜索助手...",
+  "selectedAgents": "已选助手",
   "sendPlaceholder": "输入聊天内容...",
   "sessionGroup": {
     "config": "分组管理",
@@ -256,6 +269,7 @@
     "action": "语音朗读",
     "clear": "删除语音"
   },
+  "untitledAgent": "未命名助手",
   "updateAgent": "更新助理信息",
   "upload": {
     "action": {
@@ -278,5 +292,6 @@
       }
     }
   },
+  "you": "你",
   "zenMode": "专注模式"
 }
