--- a/locales/en-US/common.json
+++ b/locales/en-US/common.json
@@ -146,6 +146,7 @@
   },
   "defaultAgent": "Default Assistant",
   "defaultSession": "Default Assistant",
+  "defaultGroup": "Group Chat",
   "delete": "Delete",
   "document": "User Manual",
   "download": "Download",
