feat: Chat input for thread panel

--- a/locales/en-US/chat.json
+++ b/locales/en-US/chat.json
@@ -115,6 +115,9 @@
     "regenerate": "Regenerate"
   },
   "messages": {
+    "dm": {
+      "sentTo": "Visible to"
+    },
     "modelCard": {
       "credit": "Credits",
       "creditPricing": "Pricing",
