✨ feat: support Vercel AI Gateway provider

--- a/docs/self-hosting/environment-variables/model-provider.mdx
+++ b/docs/self-hosting/environment-variables/model-provider.mdx
@@ -650,4 +650,27 @@ If you need to use Azure OpenAI to provide model services, you can refer to the 
 
 The above example disables all models first, then enables `fal-model-1` and `fal-model-2` (displayed as `fal-special`).
 
+## Vercel AI Gateway
+
+### `ENABLED_VERCELAIGATEWAY`
+
+- Type: Optional
+- Description: Enables Vercel AI Gateway as a model provider by default. Set to `0` to disable the Vercel AI Gateway service.
+- Default: `1`
+- Example: `0`
+
+### `VERCELAIGATEWAY_API_KEY`
+
+- Type: Required
+- Description: This is the API key you applied for in the Vercel AI Gateway service.
+- Default: -
+- Example: `vck_xxxxxx...xxxxxx`
+
+### `VERCELAIGATEWAY_MODEL_LIST`
+
+- Type: Optional
+- Description: Used to control the Vercel AI Gateway model list. Use `+` to add a model, `-` to hide a model, and `model_name=display_name` to customize the display name of a model. Separate multiple entries with commas. The definition syntax follows the same rules as other providers' model lists.
+- Default: `-`
+- Example: `-all,+vercel-model-1,+vercel-model-2=vercel-special`
+
 [model-list]: /docs/self-hosting/advanced/model-list
