--- a/locales/zh-CN/models.json
+++ b/locales/zh-CN/models.json
@@ -752,6 +752,14 @@
   "comfyui/flux-schnell": {
     "description": "FLUX.1 Schnell - 超快速文生图模型，1-4步即可生成高质量图像，Apache 2.0开源许可，适合实时应用和快速原型制作"
   },
+  "comfyui/stable-diffusion-3.5": {
+    "displayName": "Stable Diffusion 3.5",
+    "description": "Stable Diffusion 3.5 新一代文生图模型，支持 Large 和 Medium 两个版本，需要外部 CLIP 编码器文件，提供卓越的图像质量和提示词匹配度"
+  },
+  "comfyui/stable-diffusion-3.5-noclip": {
+    "displayName": "Stable Diffusion 3.5 (内置编码器)",
+    "description": "Stable Diffusion 3.5 内置 CLIP/T5 编码器版本，无需外部编码器文件，适用于 sd3.5_medium_incl_clips 等模型，资源占用更少"
+  },
   "command": {
     "description": "一个遵循指令的对话模型，在语言任务中表现出高质量、更可靠，并且相比我们的基础生成模型具有更长的上下文长度。"
   },
