--- a/locales/zh-TW/common.json
+++ b/locales/zh-TW/common.json
@@ -31,7 +31,7 @@
   "batchDelete": "批次刪除",
   "blog": "產品部落格",
   "branching": "建立子主題",
-  "branchingDisable": "「子主題」功能僅在伺服器端版本可用，如需該功能，請切換到伺服器端部署模式或使用 LobeChat Cloud",
+  "branchingDisable": "「子主題」功能僅在伺服器端版本可用，如需該功能，請切換到伺服器端部署模式或使用 IuaiChat Cloud",
   "cancel": "取消",
   "changelog": "變更日誌",
   "clientDB": {
@@ -170,7 +170,7 @@
     "and": "並",
     "feedback": {
       "action": "分享反饋",
-      "desc": "您的每一個想法和建議對我們來說都弥足珍貴，我們迫不及待地想知道您的看法！歡迎聯繫我們提供產品功能和使用體驗反饋，幫助我們將 LobeChat 建設得更好。",
+      "desc": "您的每一個想法和建議對我們來說都弥足珍貴，我們迫不及待地想知道您的看法！歡迎聯繫我們提供產品功能和使用體驗反饋，幫助我們將 IuaiChat 建設得更好。",
       "title": "在 GitHub 分享您寶貴的反饋"
     },
     "later": "稍後",
@@ -335,9 +335,9 @@
   "telemetry": {
     "allow": "允許",
     "deny": "拒絕",
-    "desc": "我們希望匿名獲取你的使用信息，進而幫助我們改進 LobeChat，並為你提供更好的產品體驗。你可以在「設定」 - 「關於」隨時關閉。",
+    "desc": "我們希望匿名獲取你的使用信息，進而幫助我們改進 IuaiChat，並為你提供更好的產品體驗。你可以在「設定」 - 「關於」隨時關閉。",
     "learnMore": "了解更多",
-    "title": "幫助 LobeChat 做得更好"
+    "title": "幫助 IuaiChat 做得更好"
   },
   "temp": "臨時",
   "terms": "服務條款",
