--- a/locales/zh-TW/electron.json
+++ b/locales/zh-TW/electron.json
@@ -44,7 +44,7 @@
   "remoteServer": {
     "authError": "授權失敗: {{error}}",
     "authPending": "請在瀏覽器中完成授權",
-    "configDesc": "連接到遠端LobeChat伺服器，啟用資料同步",
+    "configDesc": "連接到遠端IuaiChat伺服器，啟用資料同步",
     "configError": "配置出錯",
     "configTitle": "配置雲端同步",
     "connect": "連接並授權",
@@ -66,7 +66,7 @@
     "isIniting": "正在初始化...",
     "lobehubCloud": {
       "description": "官方提供的雲版本",
-      "title": "LobeHub Cloud"
+      "title": "IuaiHub Cloud"
     },
     "local": {
       "description": "使用本地資料庫，完全離線可用",
